--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: A-Sagebrush-Cinderella_65778
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: archival
+  image_path: 65778-h/images/cover.jpg
 creator:
   author:
     agent_name: Brand, Max
@@ -12,6 +15,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/743
     wikipedia: https://en.wikipedia.org/wiki/Max_Brand
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/65778#A-Sagebrush-Cinderella
 gutenberg_issued: '2021-07-06'
 gutenberg_type: Text
 identifiers:
